--- a/owstack-dev/deployment/wallet-service-wallets.yml
+++ b/owstack-dev/deployment/wallet-service-wallets.yml
@@ -15,7 +15,7 @@ spec:
         app: wallet-service-wallets
     spec:
       containers:
-      - image: registry.hub.docker.com/owstack/wallet-service:v0.1.3
+      - image: registry.hub.docker.com/owstack/wallet-service:v0.2.4
         name: wallet-service-wallets
         command: ["node", "base-service/ws.js"]
         env:
@@ -28,12 +28,12 @@ spec:
         - name: BTC_LIVENET_EXPLORER_API
           value: http://btc-explorer-api
         - name: BTC_LIVENET_EXPLORER_API_PATH
-          value: /
+          value: ""
         - name: BCH_LIVENET_EXPLORER_API
           value: http://bch-explorer-api
         - name: BCH_LIVENET_EXPLORER_API_PATH
-          value: /
+          value: ""
         - name: LTC_LIVENET_EXPLORER_API
           value: http://ltc-explorer-api
         - name: LTC_LIVENET_EXPLORER_API_PATH
-          value: /
+          value: ""
