--- a/owstack-dev/deployment/bch-explorer-ui.yml
+++ b/owstack-dev/deployment/bch-explorer-ui.yml
@@ -15,7 +15,7 @@ spec:
         app: bch-explorer-ui
     spec:
       containers:
-      - image: registry.hub.docker.com/owstack/ows-explorer:v1.0.0
+      - image: registry.hub.docker.com/owstack/explorer:v1.0.7
         name: bch-explorer-ui
         env:
         - name: PROXY_PATH
