--- a/owstack-dev/services/btc-explorer-ui.yml
+++ b/owstack-dev/services/btc-explorer-ui.yml
@@ -10,7 +10,7 @@ metadata:
       apiVersion: ambassador/v0
       kind:  Mapping
       name:  btc-explorer-ui_mapping
-      prefix: /explorer/btc/
+      prefix: /explorer/btc
       rewrite: /
       service: btc-explorer-ui:80
 
@@ -19,7 +19,7 @@ spec:
   - name: port-1
     port: 80
     protocol: TCP
-    targetPort: 3001
+    targetPort: 3000
   selector:
     app: btc-explorer-ui
   type: ClusterIP
