--- a/owstack-dev/services/btc-explorer-api.yml
+++ b/owstack-dev/services/btc-explorer-api.yml
@@ -13,6 +13,7 @@ metadata:
       prefix: /api/explorer/btc/
       rewrite: /
       service: btc-explorer-api:80
+      timeout_ms: 10000
       use_websocket: true
       cors:
         origins: "*"
